--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <img src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/FF01C60E-3379-4ED9-B65C-DE7F425CF688@2x.png" alt="Лого"/>
+        <ul>
+            <li><a>Обо мне</a></li>
+            <li><a>Проекты</a><img src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/9E1721B2-E123-44D1-BBA7-88E713A6A184@1x.png" alt="Лого"/></li>
+            <li><a>Портфолио</a></li>
+            <li><a>Блог</a></li>
+            <li><a>Контакты</a></li>
+        </ul>
+    </nav>
     <h1>Замыкания в JavaScript для начинающих</h1>
     <article>
         <p>Замыкания — это одна из фундаментальных концепций JavaScript, вызывающая сложности у многих новичков, знать и понимать которую должен каждый JS-программист. Хорошо разобравшись с замыканиями, вы сможете писать более качественный, эффективный и чистый код. А это, в свою очередь, будет способствовать вашему профессиональному росту.</p>
