--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <nav>
-        <img src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/FF01C60E-3379-4ED9-B65C-DE7F425CF688@2x.png" alt="Лого"/>
-        <ul>
+        <img  id="logo" src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/FF01C60E-3379-4ED9-B65C-DE7F425CF688@2x.png" alt="Лого"/>
+        <ul id="list">
             <li><a>Обо мне</a></li>
-            <li><a>Проекты</a><img src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/9E1721B2-E123-44D1-BBA7-88E713A6A184@1x.png" alt="Лого"/></li>
+            <li><a>Проекты</a><img id="cursor" src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/9E1721B2-E123-44D1-BBA7-88E713A6A184@1x.png" alt="Лого"/></li>
             <li><a>Портфолио</a></li>
             <li><a>Блог</a></li>
             <li><a>Контакты</a></li>
