--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>Практика верстки</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <nav>
         <img  id="logo" src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/FF01C60E-3379-4ED9-B65C-DE7F425CF688@2x.png" alt="Лого"/>
         <ul id="list">
-            <li><a>Обо мне</a></li>
-            <li><a>Проекты</a><img id="cursor" src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/9E1721B2-E123-44D1-BBA7-88E713A6A184@1x.png" alt="Лого"/></li>
-            <li><a>Портфолио</a></li>
-            <li><a>Блог</a></li>
-            <li><a>Контакты</a></li>
+            <li><h3><a>Обо мне</a></h3></li>
+            <li><h3><a>Проекты</a></h3></li>
+            <li><h3><a>Портфолио</a></h3></li>
+            <li><h3><a>Блог</a></h3></li>
+            <li><h3><a>Контакты</a></h3></li>
         </ul>
     </nav>
     <h1 class="Header" id="FirstHeader">Замыкания в JavaScript для начинающих</h1>
