--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <nav>
         <img  id="logo" src="responsive-design\2744EFD6-B878-4DCB-B0D5-526F1B233733/FF01C60E-3379-4ED9-B65C-DE7F425CF688@2x.png" alt="Лого"/>
         <ul id="list">
-            <li><h3><a>Обо мне</a></h3></li>
-            <li><h3><a>Проекты</a></h3></li>
-            <li><h3><a>Портфолио</a></h3></li>
-            <li><h3><a>Блог</a></h3></li>
-            <li><h3><a>Контакты</a></h3></li>
+            <li><a>Обо мне</a></li>
+            <li><a>Проекты</a></li>
+            <li><a>Портфолио</a></li>
+            <li><a>Блог</a></li>
+            <li><a>Контакты</a></li>
         </ul>
     </nav>
     <h1 class="Header" id="FirstHeader">Замыкания в JavaScript для начинающих</h1>
